--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://example.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+title: Charles Caspar
+email: ccaspar@dgmail.com
+url: https://ccaspar.github.io
+description: "Hello! My name is Charles Caspar. I am a data scientist living in New York. I have a financial background and am starting a new career in data science."
+keywords: "Charles, Caspar, data, science, website"
+skills: "Data Scientist - Python - CFA"
+meta_author: Caspar Charles
 
 # Google webmaster tools
 google_verify:
@@ -32,31 +32,25 @@ color:
 
 # Footer settings
 footer:
-  copyright: Dr. Henry Jekyll
+  copyright: C Caspar
   location: Location
-  social: Around the Web
+  social: My Links
   credits: Credits
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
+  - title: linkedin
+    url: http://linkedin.com/ccaspar
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/ccaspar
+
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: New York, NY
 
 # Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+credits: Thanks for visiting! Come back soon!
 
 # Build settings
 markdown: kramdown
