--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: Charles Caspar
 email: ccaspar@dgmail.com
 url: https://ccaspar.github.io
-description: "Hello! My name is Charles Caspar. I am a data analyst living in New York. I have a financial background and am starting a new career in data science."
-keywords: "Charles, Caspar, data, science, CFA, website"
-skills: "Data Analst - New York, NY"
+description: "Hello! My name is Charles Caspar. I am a data scientist living in Seattle. Currently I am working in the advertising industry, using machine learning to optimize brand media."
+keywords: "Charles, Caspar, data, science, scientist, analyst, website, seattle"
+skills: "Data Scientist - Seattle, WA"
 meta_author: Caspar Charles
 
 # Google webmaster tools
@@ -47,7 +47,7 @@ social:
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: New York, NY
+  - line: Seattle, WA
   - line: ccaspar@gmail.com
 
 # Credits content
